#38-fix(server): remove examples
