# server/src/docs/swagger.json
@@ -1,28 +1,5 @@
 {
 	"definitions": {
-		"ResponseMessage": {
-			"description": "",
-			"properties": {
-				"message": {
-					"type": "string",
-					"description": ""
-				},
-				"data": {
-					"type": "object",
-					"description": ""
-				},
-				"error": {
-					"type": "boolean",
-					"description": ""
-				}
-			},
-			"type": "object",
-			"required": [
-				"message",
-				"data",
-				"error"
-			]
-		},
 		"ProductI": {
 			"description": "",
 			"properties": {
@@ -132,7 +109,7 @@
 				"name"
 			]
 		},
-		"StoreIS": {
+		"StoreI": {
 			"description": "",
 			"properties": {
 				"id": {
@@ -151,6 +128,11 @@
 				},
 				"apiUrl": {
 					"type": "string",
+					"description": ""
+				},
+				"status": {
+					"type": "number",
+					"format": "double",
 					"description": ""
 				},
 				"colors": {
@@ -283,12 +265,9 @@
 			},
 			"type": "object",
 			"required": [
-				"id",
 				"name",
 				"managerId",
-				"apiUrl",
-				"colors",
-				"products"
+				"apiUrl"
 			]
 		},
 		"UserI": {
@@ -366,50 +345,14 @@
 					"201": {
 						"description": "Retrieve a Product.",
 						"schema": {
-							"$ref": "#/definitions/ResponseMessage"
-						},
-						"examples": {
-							"application/json": {
-								"message": "Product found",
-								"data": {
-									"id": 1,
-									"name": "Camiseta",
-									"description": "Camiseta de manga corta",
-									"price": 100,
-									"discountPercentage": 0,
-									"currentStock": 250,
-									"reorderPoint": 10,
-									"minimum": 5,
-									"storeId": 1,
-									"categories": [
-										"Camiseta"
-									],
-									"sizes": [
-										"Hombre",
-										"Mujer"
-									],
-									"brand": "Nike",
-									"url_img": "/images/cammisa01.webp",
-									"status": 1
-								},
-								"error": true
-							}
+							"$ref": "#/definitions/ProductI"
 						}
 					},
 					"204": {
 						"description": "No content"
 					},
 					"404": {
-						"description": "Product not found.",
-						"schema": {
-							"$ref": "#/definitions/ResponseMessage"
-						},
-						"examples": {
-							"application/json": {
-								"message": "Product found",
-								"error": true
-							}
-						}
+						"description": "Product not found."
 					}
 				},
 				"description": "GET a specific product from it's id",
@@ -439,35 +382,9 @@
 					"201": {
 						"description": "Retrieve a list of Products.",
 						"schema": {
-							"$ref": "#/definitions/ResponseMessage"
-						},
-						"examples": {
-							"application/json": {
-								"message": "Products found",
-								"data": [
-									{
-										"id": 1,
-										"name": "Camiseta",
-										"description": "Camiseta de manga corta",
-										"price": 100,
-										"discountPercentage": 0,
-										"currentStock": 250,
-										"reorderPoint": 10,
-										"minimum": 5,
-										"storeId": 1,
-										"categories": [
-											"Camiseta"
-										],
-										"sizes": [
-											"Hombre",
-											"Mujer"
-										],
-										"brand": "Nike",
-										"url_img": "/images/cammisa01.webp",
-										"status": 1
-									}
-								],
-								"error": false
+							"type": "array",
+							"items": {
+								"$ref": "#/definitions/ProductI"
 							}
 						}
 					},
@@ -475,16 +392,7 @@
 						"description": "No content"
 					},
 					"404": {
-						"description": "Products not found.",
-						"schema": {
-							"$ref": "#/definitions/ResponseMessage"
-						},
-						"examples": {
-							"application/json": {
-								"message": "Products not found",
-								"error": true
-							}
-						}
+						"description": "Products not found."
 					}
 				},
 				"description": "GET all products from a store id",
@@ -503,49 +411,14 @@
 					"201": {
 						"description": "Insert a Product on the Database.",
 						"schema": {
-							"$ref": "#/definitions/ResponseMessage"
-						},
-						"examples": {
-							"application/json": {
-								"message": "Product created",
-								"data": {
-									"id": 1,
-									"name": "Camiseta",
-									"description": "Camiseta de manga corta",
-									"price": 100,
-									"discountPercentage": 0,
-									"currentStock": 250,
-									"reorderPoint": 10,
-									"minimum": 5,
-									"storeId": 1,
-									"categories": [
-										"Camiseta"
-									],
-									"sizes": [
-										"Hombre",
-										"Mujer"
-									],
-									"brand": "Nike",
-									"url_img": "/images/cammisa01.webp"
-								},
-								"error": false
-							}
+							"$ref": "#/definitions/ProductI"
 						}
 					},
 					"204": {
 						"description": "No content"
 					},
 					"500": {
-						"description": "Product insert failed.",
-						"schema": {
-							"$ref": "#/definitions/ResponseMessage"
-						},
-						"examples": {
-							"application/json": {
-								"message": "Product creation failed",
-								"error": true
-							}
-						}
+						"description": "Product insert failed."
 					}
 				},
 				"description": "CREATE a product on the database",
@@ -577,43 +450,14 @@
 					"200": {
 						"description": "Update a Product on the Database. Except Categories and Sizes",
 						"schema": {
-							"$ref": "#/definitions/ResponseMessage"
-						},
-						"examples": {
-							"application/json": {
-								"message": "Product updated",
-								"data": {
-									"id": 1,
-									"name": "Camiseta",
-									"description": "Camiseta de manga corta",
-									"price": 100,
-									"discountPercentage": 0,
-									"currentStock": 250,
-									"reorderPoint": 10,
-									"minimum": 5,
-									"storeId": 1,
-									"brandId": 2,
-									"url_img": "/images/cammisa01.webp",
-									"status": 1
-								},
-								"error": false
-							}
+							"$ref": "#/definitions/ProductI"
 						}
 					},
 					"204": {
 						"description": "No content"
 					},
 					"404": {
-						"description": "Product not found.",
-						"schema": {
-							"$ref": "#/definitions/ResponseMessage"
-						},
-						"examples": {
-							"application/json": {
-								"message": "Product not found",
-								"error": true
-							}
-						}
+						"description": "Product not found."
 					}
 				},
 				"description": "UPDATE a product",
@@ -647,43 +491,14 @@
 					"200": {
 						"description": "Delete a Product on the Database.",
 						"schema": {
-							"$ref": "#/definitions/ResponseMessage"
-						},
-						"examples": {
-							"application/json": {
-								"message": "Product deleted successfully",
-								"data": {
-									"id": 1,
-									"name": "Camiseta",
-									"description": "Camiseta de manga corta",
-									"price": 100,
-									"discountPercentage": 0,
-									"currentStock": 250,
-									"reorderPoint": 10,
-									"minimum": 5,
-									"storeId": 1,
-									"brandId": 2,
-									"url_img": "/images/cammisa01.webp",
-									"status": 1
-								},
-								"error": false
-							}
+							"$ref": "#/definitions/ProductI"
 						}
 					},
 					"204": {
 						"description": "No content"
 					},
 					"404": {
-						"description": "Product not found.",
-						"schema": {
-							"$ref": "#/definitions/ResponseMessage"
-						},
-						"examples": {
-							"application/json": {
-								"message": "Product not found",
-								"error": true
-							}
-						}
+						"description": "Product not found."
 					}
 				},
 				"description": "",
@@ -752,50 +567,7 @@
 					"200": {
 						"description": "Return a store data",
 						"schema": {
-							"$ref": "#/definitions/StoreIS"
-						},
-						"examples": {
-							"application/json": {
-								"id": 1,
-								"name": "Tienda 1",
-								"managerId": 1,
-								"apiUrl": "example.com",
-								"colors": {
-									"primary": {
-										"hue": 255,
-										"sat": 255,
-										"light": 0
-									},
-									"secondary": {
-										"hue": 0,
-										"sat": 0,
-										"light": 255
-									}
-								},
-								"products": [
-									{
-										"id": 1,
-										"name": "Camiseta",
-										"description": "Camiseta de manga corta",
-										"price": 100,
-										"discountPercentage": 0,
-										"currentStock": 250,
-										"reorderPoint": 10,
-										"minimum": 5,
-										"storeId": 1,
-										"categories": [
-											"Camiseta"
-										],
-										"sizes": [
-											"Hombre",
-											"Mujer"
-										],
-										"brand": "Nike",
-										"url_img": "/images/cammisa01.webp",
-										"status": 1
-									}
-								]
-							}
+							"$ref": "#/definitions/StoreI"
 						}
 					},
 					"204": {
@@ -806,6 +578,31 @@
 					}
 				},
 				"description": "Return a store data with a give id",
+				"tags": [
+					"Stores"
+				],
+				"parameters": [
+					{
+						"description": "",
+						"in": "path",
+						"name": "storeId",
+						"required": true,
+						"type": "number",
+						"format": "double"
+					}
+				]
+			},
+			"delete": {
+				"operationId": "StoreDisableStore",
+				"produces": [
+					"text/html"
+				],
+				"responses": {
+					"204": {
+						"description": "No content"
+					}
+				},
+				"description": "",
 				"tags": [
 					"Stores"
 				],
@@ -832,40 +629,14 @@
 					"200": {
 						"description": "Retrieve an User.",
 						"schema": {
-							"$ref": "#/definitions/ResponseMessage"
-						},
-						"examples": {
-							"application/json": {
-								"message": "User found",
-								"data": {
-									"id": 1,
-									"name": "John",
-									"lastName": "Doe",
-									"email": "john@email.com",
-									"password": "123johnDoe",
-									"idDocumentType": "DNI",
-									"idDocumentNumber": 12345678,
-									"rol": "client",
-									"status": 1
-								},
-								"error": false
-							}
+							"$ref": "#/definitions/UserI"
 						}
 					},
 					"204": {
 						"description": "No content"
 					},
 					"404": {
-						"description": "User not found.",
-						"schema": {
-							"$ref": "#/definitions/ResponseMessage"
-						},
-						"examples": {
-							"application/json": {
-								"message": "User not found",
-								"error": true
-							}
-						}
+						"description": "User not found."
 					}
 				},
 				"description": "Produce an user with a given email",
@@ -894,40 +665,14 @@
 					"200": {
 						"description": "Updates an User.",
 						"schema": {
-							"$ref": "#/definitions/ResponseMessage"
-						},
-						"examples": {
-							"application/json": {
-								"message": "User updated",
-								"data": {
-									"id": 1,
-									"name": "John",
-									"lastName": "Doe",
-									"email": "john@email.com",
-									"password": "123johnDoe",
-									"idDocumentType": "DNI",
-									"idDocumentNumber": 12345678,
-									"rol": "client",
-									"status": 1
-								},
-								"error": false
-							}
+							"$ref": "#/definitions/UserI"
 						}
 					},
 					"204": {
 						"description": "No content"
 					},
 					"404": {
-						"description": "User not found.",
-						"schema": {
-							"$ref": "#/definitions/ResponseMessage"
-						},
-						"examples": {
-							"application/json": {
-								"message": "User not found",
-								"error": true
-							}
-						}
+						"description": "User not found."
 					}
 				},
 				"description": "UPDATES an user",
@@ -959,40 +704,14 @@
 					"200": {
 						"description": "Creates an User.",
 						"schema": {
-							"$ref": "#/definitions/ResponseMessage"
-						},
-						"examples": {
-							"application/json": {
-								"message": "User created",
-								"data": {
-									"id": 1,
-									"name": "John",
-									"lastName": "Doe",
-									"email": "john@email.com",
-									"password": "123johnDoe",
-									"idDocumentType": "DNI",
-									"idDocumentNumber": 12345678,
-									"rol": "client",
-									"status": 1
-								},
-								"error": true
-							}
+							"$ref": "#/definitions/UserI"
 						}
 					},
 					"204": {
 						"description": "No content"
 					},
 					"500": {
-						"description": "Server Error.",
-						"schema": {
-							"$ref": "#/definitions/ResponseMessage"
-						},
-						"examples": {
-							"application/json": {
-								"message": "Failed to create user",
-								"error": true
-							}
-						}
+						"description": "Server Error."
 					}
 				},
 				"description": "CREATES an user",
@@ -1024,25 +743,9 @@
 					"200": {
 						"description": "Retrieve a list of all Users.",
 						"schema": {
-							"$ref": "#/definitions/ResponseMessage"
-						},
-						"examples": {
-							"application/json": {
-								"message": "Users found",
-								"data": [
-									{
-										"id": 1,
-										"name": "John",
-										"lastName": "Doe",
-										"email": "john@email.com",
-										"password": "123johnDoe",
-										"idDocumentType": "DNI",
-										"idDocumentNumber": 12345678,
-										"rol": "client",
-										"status": 1
-									}
-								],
-								"error": false
+							"type": "array",
+							"items": {
+								"$ref": "#/definitions/UserI"
 							}
 						}
 					},
@@ -1050,16 +753,7 @@
 						"description": "No content"
 					},
 					"404": {
-						"description": "Users not found.",
-						"schema": {
-							"$ref": "#/definitions/ResponseMessage"
-						},
-						"examples": {
-							"application/json": {
-								"message": "Users not found",
-								"error": true
-							}
-						}
+						"description": "Users not found."
 					}
 				},
 				"description": "Produce a list of all users",
@@ -1080,40 +774,14 @@
 					"200": {
 						"description": "Logins an user.",
 						"schema": {
-							"$ref": "#/definitions/ResponseMessage"
-						},
-						"examples": {
-							"application/json": {
-								"message": "Login successful",
-								"data": {
-									"id": 1,
-									"name": "John",
-									"lastName": "Doe",
-									"email": "john@email.com",
-									"password": "123johnDoe",
-									"idDocumentType": "DNI",
-									"idDocumentNumber": 12345678,
-									"rol": "client",
-									"status": 1
-								},
-								"error": false
-							}
+							"$ref": "#/definitions/UserI"
 						}
 					},
 					"204": {
 						"description": "No content"
 					},
 					"401": {
-						"description": "User not found.",
-						"schema": {
-							"$ref": "#/definitions/ResponseMessage"
-						},
-						"examples": {
-							"application/json": {
-								"message": "User not found",
-								"error": true
-							}
-						}
+						"description": "User not found."
 					}
 				},
 				"description": "Logins an user with a given email and password",
@@ -1147,40 +815,14 @@
 					"200": {
 						"description": "User deleted.",
 						"schema": {
-							"$ref": "#/definitions/ResponseMessage"
-						},
-						"examples": {
-							"application/json": {
-								"message": "User deleted",
-								"data": {
-									"id": 1,
-									"name": "John",
-									"lastName": "Doe",
-									"email": "john@email.com",
-									"password": "123johnDoe",
-									"idDocumentType": "DNI",
-									"idDocumentNumber": 12345678,
-									"rol": "client",
-									"status": 1
-								},
-								"error": false
-							}
+							"$ref": "#/definitions/UserI"
 						}
 					},
 					"204": {
 						"description": "No content"
 					},
 					"404": {
-						"description": "User not found.",
-						"schema": {
-							"$ref": "#/definitions/ResponseMessage"
-						},
-						"examples": {
-							"application/json": {
-								"message": "User not found",
-								"error": true
-							}
-						}
+						"description": "User not found."
 					}
 				},
 				"description": "DELETE an user",
@@ -1208,40 +850,14 @@
 					"200": {
 						"description": "Retrieve an User.",
 						"schema": {
-							"$ref": "#/definitions/ResponseMessage"
-						},
-						"examples": {
-							"application/json": {
-								"message": "User found",
-								"data": {
-									"id": 1,
-									"name": "John",
-									"lastName": "Doe",
-									"email": "john@email.com",
-									"password": "123johnDoe",
-									"idDocumentType": "DNI",
-									"idDocumentNumber": 12345678,
-									"rol": "client",
-									"status": 1
-								},
-								"error": false
-							}
+							"$ref": "#/definitions/UserI"
 						}
 					},
 					"204": {
 						"description": "No content"
 					},
 					"404": {
-						"description": "User not found.",
-						"schema": {
-							"$ref": "#/definitions/ResponseMessage"
-						},
-						"examples": {
-							"application/json": {
-								"message": "User not found",
-								"error": true
-							}
-						}
+						"description": "User not found."
 					}
 				},
 				"description": "GET an user with a given id",
